--- a/requirements.txt
+++ b/requirements.txt
@@ -75,6 +75,8 @@ redshift-connector==2.0.909
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
 tables==3.7.0
+torch>=2.0.1
+transformers>=4.31.0
 trino==0.321.0
 
 # Azure
