add generic ai client andt p hugging face client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
       - ENV=dev
       - GCP_PROJECT_ID=$GCP_PROJECT_ID
       - GCP_REGION=$GCP_REGION
-      - HUGGINGFACE_TOKEN=$HUGGINGFACE_TOKEN
+      - HUGGINGFACE_API=$HUGGINGFACE_API
+      - HUGGINGFACE_INFERENCE_API_TOKEN=$HUGGINGFACE_INFERENCE_API_TOKEN
       - LDAP_ADMIN_USERNAME=$LDAP_ADMIN_USERNAME
       - LDAP_AUTHENTICATION_FILTER=$LDAP_AUTHENTICATION_FILTER
       - LDAP_AUTHORIZATION_FILTER=$LDAP_AUTHORIZATION_FILTER
