--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - ECS_CONTAINER_NAME=$ECS_CONTAINER_NAME
       - ECS_TASK_DEFINITION=$ECS_TASK_DEFINITION
       - ENABLE_NEW_RELIC=$ENABLE_NEW_RELIC
+      - ENABLE_PROMETHEUS=$ENABLE_PROMETHEUS
       - ENV=dev
       - GCP_PROJECT_ID=$GCP_PROJECT_ID
       - GCP_REGION=$GCP_REGION
