--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ gspread==5.7.2
 kubernetes==25.3.0
 langchain>=0.0.222; python_version >= '3.8'
 mysql-connector-python==8.0.31
-openai>=0.27.8
+openai>=0.27.8, <1.0.0
 oracledb==1.3.1
 pinotdb==5.1.0
 psycopg2==2.9.3
