Add kafka api_version to the data loader and data exporter templates

--- a/mage_ai/data_preparation/templates/data_exporters/streaming/kafka.yaml
+++ b/mage_ai/data_preparation/templates/data_exporters/streaming/kafka.yaml
@@ -1,6 +1,7 @@
 connector_type: kafka
 bootstrap_server: "localhost:9092"
 topic: topic_name
+api_version: 0.10.2
 
 # Uncomment the config below to use SSL config
 # security_protocol: "SSL"
