--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,9 @@ azure-storage-blob==12.14.1
 confluent-avro
 influxdb_client==1.36.1
 kafka-python==2.0.2
+nats-py
+ed25519==1.5
+nkeys==0.1.0
 opensearch-py==2.0.0
 requests_aws4auth==1.1.2
 pika==1.3.1
