--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ prometheus_client>=0.18.0
 terminado==0.17.1
 thefuzz[speedup]==0.19.0
 tornado==6.1
-typer[all]==0.7.0
+typer[all]==0.9.0
 typing-extensions==4.5.0
 
 # extras
@@ -53,6 +53,7 @@ astor>=0.8.1
 aws-secretsmanager-caching==1.1.1.5
 boto3==1.26.60
 botocore==1.29.60
+chromadb>=0.4.17
 clickhouse-connect==0.5.20
 db-dtypes==1.0.5
 duckdb==0.8.1
@@ -64,7 +65,7 @@ google-cloud-pubsub==2.16.0
 google-cloud-run==0.5.0
 google-cloud-storage==2.5.0
 gspread==5.7.2
-kubernetes==25.3.0
+kubernetes>=28.1.0
 langchain>=0.0.222; python_version >= '3.8'
 mysql-connector-python==8.0.31
 openai>=0.27.8, <1.0.0
