--- a/mage_integrations/requirements.txt
+++ b/mage_integrations/requirements.txt
@@ -14,6 +14,7 @@ google-cloud-bigquery-storage==2.16.2
 google-cloud-storage==2.5.0 
 httpx==0.23.1
 httpx[http2]
+kafka-python
 mysql-connector-python==8.0.31
 opensearch-py
 oracledb==1.3.1
