--- a/requirements.txt
+++ b/requirements.txt
@@ -56,8 +56,8 @@ botocore==1.29.60
 clickhouse-connect==0.5.20
 db-dtypes==1.0.5
 duckdb==0.8.1
-google-api-core==2.11.0
-google-api-python-client==2.70.0
+google-api-core
+google-api-python-client
 google-cloud-bigquery~=3.0
 google-cloud-iam==2.9.0
 google-cloud-pubsub==2.16.0
@@ -77,7 +77,7 @@ pyodbc==4.0.35
 redshift-connector==2.0.909
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
-tables==3.7.0
+tables
 trino==0.321.0
 
 # Azure
