--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -63,7 +63,7 @@ jobs:
           sudo apt-get install freetds-dev
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r mage_integrations/requirements.txt
+          pip install mage_integrations/
           pip install "git+https://github.com/mage-ai/singer-python.git#egg=singer-python"
       - name: Run unit tests
         run: |
