--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,58 +2,47 @@
 default_install_hook_types: [pre-commit, pre-push]
 exclude: "^mage_ai/data_preparation/templates|^mage_ai/orchestration/db/migrations/versions|^scripts/pre-start"
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
+-   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-      - id: trailing-whitespace
+    -   id: trailing-whitespace
         types: [python]
-      - id: end-of-file-fixer
+    -   id: end-of-file-fixer
         types: [python]
-      - id: check-yaml
+    -   id: check-yaml
         args: [--unsafe]
-      - id: check-json
-      - id: debug-statements
+    -   id: check-json
+    -   id: debug-statements
         types: [python]
-      - id: name-tests-test
+    -   id: name-tests-test
         types: [python]
         exclude: "base_test|factory|mixins|utils"
         args:
           - "--pytest-test-first"
-      - id: requirements-txt-fixer
+    -   id: requirements-txt-fixer
+        files: 'mage_integrations/requirements.txt'
         # excluded ./requirements.txt as it uses groups,
         # which are not handled correctly by requirements-txt-fixer
-        files: "mage_integrations/requirements.txt"
-  - repo: https://github.com/DavidAnson/markdownlint-cli2
-    rev: v0.10.0
-    hooks:
-      - id: markdownlint-cli2
-  - repo: local
-    hooks:
-      - id: isort
-        name: isort
-        entry: isort
-        # assumes isort is installed in local virtual environment as dev dependency
-        language: system
-        types: [python]
-      - id: flake8
-        name: flake8
-        entry: flake8
-        # assumes flake8 is installed in local virtual environment as dev dependency
-        language: system
-        types: [python]
-        exclude: "mage_integrations\/mage_integrations\/sources\/.*\/tap_.*\/*|mage_integrations\/mage_integrations\/destinations\/.*\/target_.*\/*"
-      - id: markdownlint-cli2
-        name: markdownlint-cli2
-        description: "Checks the style of Markdown/CommonMark files with a non-root configuration."
-        entry: davidanson/markdownlint-cli2-rules markdownlint-cli2-config
-        language: docker_image
-        types: [markdown]
-        minimum_pre_commit_version: 0.15.0
-    # - id: black
-    #   name: black
-    #   entry: black
-    #   language: system
-    #   types: [python]
+- repo: local
+  hooks:
+  - id: isort
+    name: isort
+    entry: isort
+    # assumes isort is installed in local virtual environment as dev dependency
+    language: system
+    types: [python]
+  - id: flake8
+    name: flake8
+    entry: flake8
+    # assumes flake8 is installed in local virtual environment as dev dependency
+    language: system
+    types: [python]
+    exclude: "mage_integrations\/mage_integrations\/sources\/.*\/tap_.*\/*|mage_integrations\/mage_integrations\/destinations\/.*\/target_.*\/*"
+  # - id: black
+  #   name: black
+  #   entry: black
+  #   language: system
+  #   types: [python]
 # - repo: https://github.com/sourcery-ai/sourcery
 #   rev: v1.2.0
 #   hooks:
