[Feature] ✨ Add support for NATS JetStream message broker (#3985)
* ♻️ refactored nats async code

* Adding nats_js.py

* 🐛 had commented out some proper functionality

* 🔧 cleanup

* 🚨 fixing linter warnings

* 🔧 fixed print statements so they go to mage-ai frontend

* 🧪 added test for nats_js

* 🧪 added test for nats_js

* 🐛 ditching test_server in favour of localhost so dns resolves

* 🔧 working on NATS test

* 🧪 fixing nats test

* ♻️ cleaning up requirements.txt

* 🧪 fixing nats test..

* 🧪 adding natsto test_source_factory

* 🩹 addressing configurable consumer and stream names from code review

* 🐛 updated read so it will continuously read from a stream

* 🔧 removed extra delay

* 🔧 little cleanup and added nats-py to setup.py

* 🔧 replace a break with a continue

* 🐛 missing stream_name in test

* 🔒 adding in ssl connect for nats

* 🔧 missing some options in vanilla nats connect

* 💄 removing checkpoint_path

* 🎉 added support for nkey authorization

* 💄 properly acking messages received from NATS now

* 🧪 fixing nats test

* 💄 returning a tuple from afetch_messages now consolidating json decoding to one routine

* 🔧 dealing with errors in our batch processing better

* 🚧 added some prints so we can monitor progress

* 🔧 adding nats reqs to setup.py

* ♻️ refactored nkey auth code

* 🔧 had some missing files

* 💄 update variable name

* 🔧 fixes per code review

--- a/requirements.txt
+++ b/requirements.txt
@@ -93,6 +93,8 @@ azure-storage-blob==12.14.1
 confluent-avro
 influxdb_client==1.36.1
 kafka-python==2.0.2
+nats-py==2.6.0
+nkeys
 opensearch-py==2.0.0
 requests_aws4auth==1.1.2
 pika==1.3.1
