Modified authentication settings and docs Modified config.json Linted all tap-salesforce files

--- a/mage_integrations/mage_integrations/sources/salesforce/templates/config.json
+++ b/mage_integrations/mage_integrations/sources/salesforce/templates/config.json
@@ -1,6 +1,8 @@
 {
   "api_type": "REST",
-  "credentials": "",
+  "client_id": "",
+  "client_secret": "",
+  "refresh_token": "",
   "domain": "login",
   "select_fields_by_default": true,
   "threshold": 1000,
