--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ kubernetes==25.3.0
 langchain>=0.0.222; python_version >= '3.8'
 mysql-connector-python==8.0.31
 openai>=0.27.8, <1.0.0
-opentelemetry-exporter-prometheus>=1.12.0rc1
+opentelemetry-exporter-prometheus>=0.41b0
 opentelemetry-instrumentation-tornado>=0.41b0
 oracledb==1.3.1
 pinotdb==5.1.0
