[dy] Add column_header_format option

--- a/mage_integrations/mage_integrations/sources/amazon_s3/templates/config.json
+++ b/mage_integrations/mage_integrations/sources/amazon_s3/templates/config.json
@@ -2,6 +2,7 @@
   "aws_access_key_id": null,
   "aws_region": "us-west-2",
   "aws_secret_access_key": null,
+  "column_header_format": null,
   "bucket": null,
   "file_type": "infer",
   "prefix": null,
