--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ dask>=2022.2.0
 datadog==0.44.0
 freezegun==1.2.2
 great_expectations==0.15.50
-httpx
+httpx==0.23.1
 inflection==0.5.1
 ipykernel==6.15.0
 ipython==7.34.0
@@ -66,7 +66,10 @@ kubernetes==25.3.0
 langchain>=0.0.222; python_version >= '3.8'
 mysql-connector-python==8.0.31
 openai>=0.27.8, <1.0.0
+opentelemetry-exporter-prometheus>=1.12.0rc1
+opentelemetry-instrumentation-tornado>=0.41b0
 oracledb==1.3.1
+pinotdb==5.1.0
 prometheus_client>=0.18.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
