Fixed Salesforce Source not running sync (#4048)
* Fixed Salesforce Source

* Modified authentication settings and docs
Modified config.json
Linted all tap-salesforce files

--- a/mage_integrations/mage_integrations/sources/salesforce/templates/config.json
+++ b/mage_integrations/mage_integrations/sources/salesforce/templates/config.json
@@ -1,10 +1,10 @@
 {
-  "api_type": "BULK",
+  "api_type": "REST",
   "client_id": "",
   "client_secret": "",
-  "is_sandbox": false,
-  "lookback_window": 10,
   "refresh_token": "",
+  "domain": "login",
   "select_fields_by_default": true,
+  "threshold": 1000,
   "start_date": ""
 }
