--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -17,6 +17,11 @@
   "dependencies": {
     "@amplitude/react-amplitude": "^1.0.0",
     "@monaco-editor/react": "^4.6.0",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.45.1",
+    "@opentelemetry/sdk-node": "^0.45.1",
+    "@opentelemetry/sdk-trace-base": "^1.18.1",
+    "@opentelemetry/sdk-trace-node": "^1.18.1",
     "@types/moment-duration-format": "^2.2.5",
     "@types/react-table": "^7.7.12",
     "@visx/axis": "2.14.0",
@@ -47,7 +52,7 @@
     "moment-timezone": "^0.5.43",
     "monaco-editor": "^0.44.0",
     "monaco-themes": "^0.4.4",
-    "next": "12.3.4",
+    "next": "14.0.3",
     "next-cookies": "^2.0.3",
     "next-remove-imports": "^1.0.12",
     "react": "18.1.0",
