--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,8 @@ mysql-connector-python==8.0.31
 openai>=0.27.8, <1.0.0
 opentelemetry-exporter-prometheus>=0.41b0
 opentelemetry-instrumentation-tornado>=0.41b0
+opentelemetry-exporter-otlp==1.21.0
+opentelemetry-instrumentation-sqlalchemy
 oracledb==1.3.1
 pinotdb==5.1.0
 prometheus_client>=0.18.0
