--- a/mage_ai/data_preparation/templates/data_loaders/streaming/nats.yaml
+++ b/mage_ai/data_preparation/templates/data_loaders/streaming/nats.yaml
@@ -3,7 +3,7 @@ server_url: "nats://localhost:4222"
 subject: subject_name
 stream_name: stream_name
 
-# Optional: Consumer type, available types: PULL and PUSH. Use PULL if not provided
+# Optional: Consumer type, available types: PULL and PUSH. Defined as PULL by default
 consumer_type: PULL
 
 # Optional: Push consumer configuration
@@ -24,5 +24,5 @@ use_tls: false
 # Optional: NKEY seed string
 # nkeys_seed_str: "SUAPAEYJQOQHJ4"
 
-# Optional: Consumer name for durable consumer identifier, use stream name if not provided
+# Optional: Consumer name for a durable consumer identifier, will use stream name if not provided
 consumer_name: "my_consumer"
