--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "build": "next build",
     "export": "next build && next export",
-    "export_prod": "next build && next export -o ../server/frontend_dist",
-    "export_prod_base_path": "next build && next export -o ../server/frontend_dist_base_path_template",
+    "export_prod": "next build && next export && mv out ../server/frontend_dist",
+    "export_prod_base_path": "next build && next export && mv out ../server/frontend_dist_base_path_template",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
