--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "export": "next build && next export",
-    "export_prod": "next build && next export && mv out ../server/frontend_dist",
-    "export_prod_base_path": "next build && next export && mv out ../server/frontend_dist_base_path_template",
+    "export": "next build",
+    "export_prod": "next build && mv out ../server/frontend_dist",
+    "export_prod_base_path": "next build && mv out ../server/frontend_dist_base_path_template",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
