🔨 cleaning up build steps

--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "export": "next build",
     "export_prod": "next build && mv out ../server/frontend_dist",
-    "export_prod_base_path": "next build && mv out ../server/frontend_dist_base_path_template",
+    "export_prod_base_path": "next build && rm -rf ../server/frontend_dist_base_path_template && mv frontend_dist ../server/frontend_dist_base_path_template",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
