--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ x-server_settings: &server_settings
     - ECS_CONTAINER_NAME=$ECS_CONTAINER_NAME
     - ECS_TASK_DEFINITION=$ECS_TASK_DEFINITION
     - ENABLE_NEW_RELIC=$ENABLE_NEW_RELIC
+    - ENABLE_PROJECT_PLATFORM=$ENABLE_PROJECT_PLATFORM
     - ENABLE_PROMETHEUS=$ENABLE_PROMETHEUS
     - ENV=dev
     - GCP_PROJECT_ID=$GCP_PROJECT_ID
