--- a/requirements.txt
+++ b/requirements.txt
@@ -76,9 +76,9 @@ psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pydruid==0.6.5
 pyodbc==4.0.35
-qdrant-client>=1.6.9
+qdrant-client==1.6.9
 redshift-connector==2.0.909
-sentence-transformers>=2.2.2
+sentence-transformers==2.2.2
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
 tables==3.7.0
