--- a/requirements.txt
+++ b/requirements.txt
@@ -67,8 +67,8 @@ kubernetes>=28.1.0
 langchain>=0.0.222; python_version >= '3.8'
 mysql-connector-python==8.0.31
 openai>=0.27.8, <1.0.0
-opentelemetry-exporter-prometheus>=0.41b0
-opentelemetry-instrumentation-tornado>=0.41b0
+opentelemetry-exporter-prometheus==0.41b0
+opentelemetry-instrumentation-tornado==0.41b0
 oracledb==1.3.1
 pinotdb==5.1.0
 prometheus_client>=0.18.0
@@ -76,9 +76,9 @@ psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pydruid==0.6.5
 pyodbc==4.0.35
-qdrant-client>=1.6.9
+qdrant-client==1.6.9
 redshift-connector==2.0.909
-sentence-transformers>=2.2.2
+sentence-transformers==2.2.2
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
 tables==3.7.0
