--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,30 @@
-Faker==4.14.0
-GitPython==3.1.34
-Jinja2==3.1.2
 PyGithub==1.59.0
-PyJWT==2.6.0
-aiofiles==22.1.0
-alembic>=1.7.5
-bcrypt==4.0.1
-croniter==1.3.7
-cryptography==36.0.2
-dask>=2022.2.0
-datadog==0.44.0
-freezegun==1.2.2
-great_expectations==0.15.50
-httpx==0.23.1
-inflection==0.5.1
-ipykernel==6.15.0
-ipython==7.34.0
-itsdangerous~=1.1.0
-joblib>=1.1.0
-jupyter-server-proxy==3.2.1
-jupyter-server==1.23.5
-jupyter_client==7.3.4
-ldap3==2.9.1
-newrelic==8.8.0
-numpy>=1.21.0
-pandas>=1.3.0
-polars<=0.19.2
-protobuf
-pyarrow==10.0.1
-pyarrow-hotfix==0.5
-python-dateutil==2.8.2
-pytz==2022.2.1
-pyyaml~=6.0
-redis
-requests==2.31.0
-ruamel.yaml==0.17.17
-scikit-learn>=1.0
-sentry-sdk==1.19.1
-simplejson
-six>=1.15.0
-sqlalchemy>=1.4.20, <2.0.0
-terminado==0.17.1
-thefuzz[speedup]==0.19.0
-tornado==6.1
-typer[all]==0.9.0
-typing-extensions==4.5.0
-
-# extras
 astor>=0.8.1
 aws-secretsmanager-caching==1.1.1.5
+azure-eventhub==5.11.2
+azure-identity==1.12.0
+azure-keyvault-certificates==4.6.0
+azure-keyvault-secrets==4.6.0
+azure-mgmt-containerinstance==10.1.0
+azure-storage-blob==12.14.1
 boto3==1.26.60
 botocore==1.29.60
 chromadb>=0.4.17
-clickhouse-connect==0.5.20
+clickhouse-connect~=0.6.23
+confluent-avro~=1.8.0
 db-dtypes==1.0.5
+dbt-bigquery==1.7.2
+dbt-core==1.7.4
+dbt-duckdb==1.7.0
+dbt-postgres==1.7.4
+dbt-redshift==1.7.1
+dbt-snowflake==1.7.1
+dbt-spark==1.7.1
+dbt-sqlserver==1.3.1
+dbt-trino==1.7.1
+dbt-clickhouse==1.7.1
 duckdb==0.9.1
+elasticsearch==8.9.0
 google-api-core==2.11.0
 google-api-python-client==2.70.0
 google-cloud-bigquery~=3.0
@@ -62,58 +32,33 @@ google-cloud-iam==2.9.0
 google-cloud-pubsub==2.16.0
 google-cloud-run==0.5.0
 google-cloud-storage==2.5.0
+great_expectations==0.15.50
 gspread==5.7.2
+influxdb_client==1.36.1
+kafka-python==2.0.2
 kubernetes>=28.1.0
-langchain>=0.0.222; python_version >= '3.8'
-mysql-connector-python==8.0.31
+langchain>=0.0.222
+ldap3==2.9.1
+nats-py==2.6.0
+nkeys~=0.1.0
 openai>=0.27.8, <1.0.0
+opensearch-py==2.0.0
 opentelemetry-exporter-prometheus==0.41b0
 opentelemetry-instrumentation-tornado==0.41b0
 oracledb==1.3.1
+pika==1.3.1
 pinotdb==5.1.0
 prometheus_client>=0.18.0
-psycopg2==2.9.3
 psycopg2-binary==2.9.3
+psycopg2==2.9.3
 pydruid==0.6.5
+pymongo==4.3.3
 pyodbc==4.0.35
 qdrant-client==1.6.9
-redshift-connector==2.0.909
+redshift-connector~=2.0.915
+requests_aws4auth==1.1.2
 sentence-transformers==2.2.2
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
-tables==3.7.0
-trino==0.321.0
-
-# Azure
-azure-eventhub==5.11.2
-azure-identity==1.12.0
-azure-keyvault-secrets==4.6.0
-azure-keyvault-certificates==4.6.0
-azure-mgmt-containerinstance==10.1.0
-azure-storage-blob==12.14.1
-
-# Streaming
-confluent-avro
-influxdb_client==1.36.1
-kafka-python==2.0.2
-nats-py==2.6.0
-nkeys
-opensearch-py==2.0.0
-requests_aws4auth==1.1.2
-pika==1.3.1
-pymongo==4.3.3
-elasticsearch==8.9.0
 stomp.py==8.1.0
-
-# DBT
-dbt-bigquery==1.4.3
-dbt-clickhouse==1.4.0
-dbt-core==1.4.8
-dbt-dremio==1.5.0
-dbt-duckdb==1.4.2
-dbt-postgres==1.4.8
-dbt-redshift==1.4.0
-dbt-snowflake==1.4.4
-dbt-spark==1.4.0
-dbt-sqlserver==1.4.3
-dbt-trino==1.4.0
+thefuzz[speedup]==0.19.0
