--- a/requirements.txt
+++ b/requirements.txt
@@ -82,7 +82,7 @@ sentence-transformers==2.2.2
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
 tables==3.7.0
-trino==0.321.0
+trino~=0.326
 
 # Azure
 azure-eventhub==5.11.2
