--- a/mage_integrations/requirements.txt
+++ b/mage_integrations/requirements.txt
@@ -11,14 +11,15 @@ google-analytics-data==0.14.2
 google-api-python-client==2.70.0
 google-cloud-bigquery~=3.0
 google-cloud-bigquery-storage==2.16.2
-google-cloud-storage==2.5.0 
+google-cloud-storage==2.5.0
 httpx==0.23.1
 httpx[http2]
 kafka-python
-mysql-connector-python==8.0.31
+mysql-connector-python
 opensearch-py
 oracledb==1.3.1
 pendulum==2.1.0
+protobuf>=4.0.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pyarrow==10.0.1
@@ -26,7 +27,7 @@ pymongo==4.3.3
 pymongo_schema==0.4.1
 python-dateutil==2.8.2
 python-magic==0.4.27
-redshift-connector==2.0.909
+redshift-connector~=2.0.915
 requests==2.27.1
 requests_mock==1.10.0
 simple_salesforce
@@ -36,7 +37,7 @@ snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
 stripe==5.5.0
 terminaltables==3.1.10
-trino==0.321.0
+trino~=0.326
 twitter-ads==11.0.0
 tzlocal==4.2
 xlsx2csv==0.8.1
