--- a/mage_integrations/requirements.txt
+++ b/mage_integrations/requirements.txt
@@ -32,7 +32,7 @@ requests==2.27.1
 requests_mock==1.10.0
 simple_salesforce
 simplejson==3.17.6
-singer_sdk==0.30.0
+singer_sdk
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
 stripe==5.5.0
