--- a/mage_integrations/requirements.txt
+++ b/mage_integrations/requirements.txt
@@ -14,9 +14,9 @@ google-cloud-bigquery-storage==2.16.2
 google-cloud-storage==2.5.0
 httpx==0.23.1
 httpx[http2]
-kafka-python
-mysql-connector-python
-opensearch-py
+kafka-python~=2.0.2
+mysql-connector-python~=8.2.0
+opensearch-py~=2.0.0
 oracledb==1.3.1
 pendulum==2.1.0
 protobuf>=4.0.0
@@ -28,11 +28,11 @@ pymongo_schema==0.4.1
 python-dateutil==2.8.2
 python-magic==0.4.27
 redshift-connector~=2.0.915
-requests==2.27.1
+requests~=2.31.0
 requests_mock==1.10.0
-simple_salesforce
+simple_salesforce~=1.12.5
 simplejson==3.17.6
-singer_sdk
+singer_sdk~=0.34.1
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
 stripe==5.5.0
