--- a/requirements.txt
+++ b/requirements.txt
@@ -26,18 +26,18 @@ newrelic==8.8.0
 numpy>=1.21.0
 pandas>=1.3.0
 polars<=0.19.2
-protobuf
-pyarrow==10.0.1
+protobuf~=4.21.12
 pyarrow-hotfix==0.5
+pyarrow==10.0.1
 python-dateutil==2.8.2
 pytz==2022.2.1
 pyyaml~=6.0
-redis
-requests==2.31.0
+redis~=5.0.1
+requests~=2.31.0
 ruamel.yaml==0.17.17
 scikit-learn>=1.0
 sentry-sdk==1.19.1
-simplejson
+simplejson~=3.17.6
 six>=1.15.0
 sqlalchemy>=1.4.20, <2.0.0
 terminado==0.17.1
@@ -55,17 +55,17 @@ chromadb>=0.4.17
 clickhouse-connect~=0.6.23
 db-dtypes==1.0.5
 duckdb==0.9.1
-google-api-core
-google-api-python-client==2.70.0
-google-cloud-bigquery~=3.0
-google-cloud-iam
-google-cloud-pubsub
-google-cloud-run
-google-cloud-storage==2.5.0
+google-api-core~=2.15.0
+google-api-python-client~=2.70.0
+google-cloud-bigquery~=3.14.1
+google-cloud-iam~=2.13.0
+google-cloud-pubsub~=2.19.0
+google-cloud-run~=0.10.1
+google-cloud-storage~=2.5.0
 gspread==5.7.2
 kubernetes>=28.1.0
 langchain>=0.0.222; python_version >= '3.8'
-mysql-connector-python
+mysql-connector-python~=8.2.0
 openai>=0.27.8, <1.0.0
 opentelemetry-exporter-prometheus==0.41b0
 opentelemetry-instrumentation-tornado==0.41b0
