--- a/mage_integrations/requirements.txt
+++ b/mage_integrations/requirements.txt
@@ -1,6 +1,6 @@
 attrs==17.4.0
 azure-storage-blob==12.14.1
-backoff==2.0.0
+backoff
 clickhouse_sqlalchemy
 couchbase==4.1.1
 deltalake==0.7.0
@@ -11,14 +11,15 @@ google-analytics-data==0.14.2
 google-api-python-client==2.70.0
 google-cloud-bigquery~=3.0
 google-cloud-bigquery-storage==2.16.2
-google-cloud-storage==2.5.0 
+google-cloud-storage==2.5.0
 httpx==0.23.1
 httpx[http2]
-kafka-python
-mysql-connector-python==8.0.31
-opensearch-py
+kafka-python~=2.0.2
+mysql-connector-python~=8.2.0
+opensearch-py~=2.0.0
 oracledb==1.3.1
 pendulum==2.1.0
+protobuf>=4.0.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pyarrow==10.0.1
@@ -26,17 +27,17 @@ pymongo==4.3.3
 pymongo_schema==0.4.1
 python-dateutil==2.8.2
 python-magic==0.4.27
-redshift-connector==2.0.909
-requests==2.27.1
+redshift-connector~=2.0.915
+requests~=2.31.0
 requests_mock==1.10.0
-simple_salesforce
-simplejson==3.17.6
-singer_sdk==0.30.0
+simple_salesforce~=1.12.5
+simplejson
+singer_sdk~=0.34.1
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
 stripe==5.5.0
 terminaltables==3.1.10
-trino==0.321.0
+trino~=0.326
 twitter-ads==11.0.0
 tzlocal==4.2
 xlsx2csv==0.8.1
