--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ pydruid==0.6.5
 pyodbc==4.0.35
 qdrant-client==1.6.9
 redshift-connector==2.0.915
+lxml==4.9.4
 sentence-transformers==2.2.2
 snowflake-connector-python==3.2.1
 sshtunnel==0.4.0
