--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ ldap3==2.9.1
 newrelic==8.8.0
 numpy>=1.21.0
 pandas>=1.3.0
-polars<=0.19.2
+polars>=0.18.0, <0.19.2
 protobuf~=4.21.12
 pyarrow-hotfix==0.5
 pyarrow==10.0.1
