--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ x-server_settings: &server_settings
     - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
     - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
     - DEBUG=$DEBUG
+    - DEUS_EX_MACHINA=$DEUS_EX_MACHINA
+    - DISABLE_DATABASE_TERMINAL_OUTPUT=$DISABLE_DATABASE_TERMINAL_OUTPUT
     - ECS_CLUSTER_NAME=$ECS_CLUSTER_NAME
     - ECS_CONTAINER_NAME=$ECS_CONTAINER_NAME
     - ECS_TASK_DEFINITION=$ECS_TASK_DEFINITION
