--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -9,7 +9,7 @@ on:
         default: master
       feature_branch:
         description: 'Feature branch'
-        required: true
+        required: false
         default: null
       name:
         description: 'Docker image name'
