[dy] Update export frontend to be able to be run on all branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,12 @@ jobs:
           fingerprints:
             - "50:0e:ac:20:b8:b0:c0:65:80:77:5b:43:9b:b4:50:a1"
       - run:
-          name: Checkout to master branch
+          name: Checkout to current branch
           command: |
+            git fetch origin
             git config user.email "ci@mage.ai"
             git config user.name "Circle CI"
-            git checkout master
+            git checkout $CIRCLE_BRANCH
       - run:
           name: Build and export
           command: ( cd mage_ai/frontend && yarn install && yarn export_prod )
@@ -50,8 +51,8 @@ jobs:
           command: |
             git add mage_ai/server/frontend_dist
             git add mage_ai/server/frontend_dist_base_path_template
-            git commit -m "[CI] Update production build"
-            git push origin master
+            git commit -m "[CI] Update frontend build"
+            git push origin $CIRCLE_BRANCH
 
 workflows:
   build_and_export:
@@ -65,6 +66,7 @@ workflows:
             branches:
               only:
                 - master
+                - alpha
       - export_frontend:
           requires:
             - hold
@@ -72,3 +74,4 @@ workflows:
             branches:
               only:
                 - master
+                - alpha
