--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ x-server_settings: &server_settings
     - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
     - DEBUG=$DEBUG
     - DEUS_EX_MACHINA=$DEUS_EX_MACHINA
+    - DISABLE_API_TERMINAL_OUTPUT=$DISABLE_API_TERMINAL_OUTPUT
     - DISABLE_DATABASE_TERMINAL_OUTPUT=$DISABLE_DATABASE_TERMINAL_OUTPUT
     - ECS_CLUSTER_NAME=$ECS_CLUSTER_NAME
     - ECS_CONTAINER_NAME=$ECS_CONTAINER_NAME
