--- a/mage_integrations/requirements.txt
+++ b/mage_integrations/requirements.txt
@@ -7,6 +7,7 @@ deltalake==0.7.0
 elasticsearch==8.9.0
 facebook_business==17.0.2
 gnupg==2.3.1
+google-ads==22.1.0
 google-analytics-data==0.14.2
 google-api-python-client==2.70.0
 google-cloud-bigquery~=3.0
