--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ jupyter-server-proxy==3.2.1
 jupyter-server==1.23.5
 jupyter_client==7.3.4
 ldap3==2.9.1
+modin[dask]==0.28.0
 newrelic==8.8.0
 numpy>=1.21.0
 pandas>=1.3.0
