--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Bug report
 description: Create a report to help us improve
 title: '[BUG] '
-labels: []
+labels: ['bug']
 assignees: []
 body:
   - type: input
