--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -44,6 +44,7 @@
     "cronstrue": "^2.31.0",
     "d3-color": "^3.1.0",
     "dangerously-set-html-content": "^1.0.13",
+    "framer-motion": "^10.18.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "local-storage": "^2.0.0",
