fix oracle issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,8 @@ x-app_settings: &app_settings
 services:
   server:
     <<: *server_settings
+    networks:
+      - oracle-network
   app:
     <<: *app_settings
   server_spark:
@@ -106,3 +108,7 @@ services:
       dockerfile: ./dev.spark.Dockerfile
     depends_on:
       - server_spark
+networks:
+  oracle-network:
+    name: mage-app
+    external: true
