--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ x-server_settings: &server_settings
     - ECS_TASK_DEFINITION=$ECS_TASK_DEFINITION
     - ENABLE_NEW_RELIC=$ENABLE_NEW_RELIC
     - ENABLE_PROMETHEUS=$ENABLE_PROMETHEUS
+    - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+    - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
+    - OTEL_PYTHON_TORNADO_EXCLUDED_URLS=$OTEL_PYTHON_TORNADO_EXCLUDED_URLS
     - ENV=dev
     - GCP_PROJECT_ID=$GCP_PROJECT_ID
     - GCP_REGION=$GCP_REGION
@@ -59,6 +62,8 @@ x-app_settings: &app_settings
   depends_on:
     - server
   command: ./scripts/install_and_run.sh
+  environment:
+      - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
   ports:
     - 3000:3000
   volumes:
