--- a/mage_ai/orchestration/db/alembic.ini
+++ b/mage_ai/orchestration/db/alembic.ini
@@ -72,18 +72,13 @@ sqlalchemy.url = sqlite:///mage-ai.db
 
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic
+keys = sqlalchemy,alembic
 
 [handlers]
 keys = console
 
 [formatters]
 keys = generic
-
-[logger_root]
-level = WARN
-handlers = console
-qualname =
 
 [logger_sqlalchemy]
 level = WARN
