[dy] Configure loggers manually when running migrations

--- a/mage_ai/orchestration/db/alembic.ini
+++ b/mage_ai/orchestration/db/alembic.ini
@@ -72,13 +72,18 @@ sqlalchemy.url = sqlite:///mage-ai.db
 
 # Logging configuration
 [loggers]
-keys = sqlalchemy,alembic
+keys = root,sqlalchemy,alembic
 
 [handlers]
 keys = console
 
 [formatters]
 keys = generic
+
+[logger_root]
+level = WARN
+handlers = console
+qualname =
 
 [logger_sqlalchemy]
 level = WARN
