--- a/requirements.txt
+++ b/requirements.txt
@@ -67,8 +67,10 @@ kubernetes>=28.1.0
 langchain>=0.0.222; python_version >= '3.8'
 mysql-connector-python~=8.2.0
 openai>=0.27.8, <1.0.0
-opentelemetry-exporter-prometheus==0.41b0
-opentelemetry-instrumentation-tornado==0.41b0
+opentelemetry-exporter-prometheus==0.43b0
+opentelemetry-instrumentation-tornado==0.43b0
+opentelemetry-exporter-otlp==1.22.0
+opentelemetry-instrumentation-sqlalchemy==0.43b0
 oracledb==1.3.1
 pinotdb==5.1.0
 prometheus_client>=0.18.0
