--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ terminado==0.17.1
 thefuzz[speedup]==0.19.0
 tornado==6.3.3
 typer[all]==0.9.0
-typing_extensions==4.10.0
+typing_extensions==4.11.0
 watchdog==4.0.0
 
 # extras
@@ -84,7 +84,8 @@ redshift-connector==2.0.915
 lxml==4.9.4
 snowflake-connector-python==3.5.0
 sshtunnel==0.4.0
-tables==3.7.0
+tables==3.7.0; python_version == '3.8'
+tables==3.9.2; python_version >= '3.9'
 trino~=0.326
 
 # Azure
