--- a/test_project/metadata.yaml
+++ b/test_project/metadata.yaml
@@ -52,3 +52,4 @@ notification_config:
   teams_config:
     webhook_url: "{{ env_var('MAGE_TEAMS_WEBHOOK_URL') }}"
 project_uuid: a9782007d7894695a1f290c6c9d289ac
+help_improve_mage: false
