--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ google-cloud-run~=0.10.1
 google-cloud-storage~=2.5.0
 gspread==5.7.2
 kubernetes>=28.1.0
-langchain>=0.0.222; python_version >= '3.8'
+langchain==0.1.6; python_version >= '3.8'
 langchain_community<0.0.20
 mysql-connector-python~=8.2.0
 openai>=0.27.8, <1.0.0
