--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,6 @@ astor>=0.8.1
 aws-secretsmanager-caching==1.1.1.5
 boto3==1.26.60
 botocore==1.29.60
-chromadb>=0.4.17
 clickhouse-connect~=0.6.23
 db-dtypes==1.0.5
 duckdb==0.9.2
@@ -68,11 +67,10 @@ langchain==0.1.6; python_version >= '3.8'
 langchain_community<0.0.20
 mysql-connector-python~=8.2.0
 openai>=0.27.8, <1.0.0
-# opentelemetry-api==1.22.0
-# opentelemetry-exporter-prometheus==0.43b0
-# opentelemetry-instrumentation-tornado==0.43b0
-# opentelemetry-exporter-otlp==1.22.0
-# opentelemetry-instrumentation-sqlalchemy==0.43b0
+opentelemetry-exporter-prometheus==0.43b0
+opentelemetry-instrumentation-tornado==0.43b0
+opentelemetry-exporter-otlp==1.22.0
+opentelemetry-instrumentation-sqlalchemy==0.43b0
 oracledb==1.3.1
 pinotdb==5.1.0
 prometheus_client>=0.18.0
