--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,6 @@ astor>=0.8.1
 aws-secretsmanager-caching==1.1.1.5
 boto3==1.26.60
 botocore==1.29.60
-chromadb>=0.4.17
 clickhouse-connect~=0.6.23
 db-dtypes==1.0.5
 duckdb==0.9.2
@@ -64,10 +63,11 @@ google-cloud-run~=0.10.1
 google-cloud-storage~=2.5.0
 gspread==5.7.2
 kubernetes>=28.1.0
-langchain>=0.0.222; python_version >= '3.8'
+langchain==0.1.6; python_version >= '3.8'
 langchain_community<0.0.20
 mysql-connector-python~=8.2.0
 openai>=0.27.8, <1.0.0
+opentelemetry-api==1.22.0
 opentelemetry-exporter-prometheus==0.43b0
 opentelemetry-instrumentation-tornado==0.43b0
 opentelemetry-exporter-otlp==1.22.0
