temp table update

--- a/mage_integrations/mage_integrations/destinations/trino/templates/config.json
+++ b/mage_integrations/mage_integrations/destinations/trino/templates/config.json
@@ -9,5 +9,6 @@
   "ssl": false,
   "table": "",
   "username": "",
-  "location": ""
+  "location": "",
+  "ignore_location_for_temp_tables": "false"
 }
