[fa] Server logging format template overriding (#4772)
* [fa] Added env variable, made adjustments to docker-compose.yml for local development, added docs

* [fa] Added docs for "ModuleNotFoundError" troubleshooting

* [fa] Small formatting fix

* [fa] Fixed default value and corresponding docs

* [fa] Fixed logging docs

* [fa] Fixed logging docs

* [fa] Small fixes

---------

Co-authored-by: Фаль Александр Евгеньевич <afal@dpkapp.ru>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ x-server_settings: &server_settings
     - REQUIRE_USER_AUTHENTICATION=$REQUIRE_USER_AUTHENTICATION
     - REQUIRE_USER_PERMISSIONS=$REQUIRE_USER_PERMISSIONS
     - SERVER_VERBOSITY=$SERVER_VERBOSITY
+    - SERVER_LOGGING_TEMPLATE=${SERVER_LOGGING_TEMPLATE:-%(levelname)s:%(name)s:%(message)s}
     - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
     - SCHEDULER_TRIGGER_INTERVAL=$SCHEDULER_TRIGGER_INTERVAL
   ports:
