--- a/mage_integrations/requirements.txt
+++ b/mage_integrations/requirements.txt
@@ -1,7 +1,7 @@
 attrs==17.4.0
 azure-storage-blob==12.14.1
 backoff
-clickhouse_sqlalchemy
+clickhouse_sqlalchemy~=0.2.4
 couchbase==4.1.1
 deltalake==0.7.0
 elasticsearch==8.9.0
