--- a/mage_integrations/mage_integrations/destinations/elasticsearch/templates/config.json
+++ b/mage_integrations/mage_integrations/destinations/elasticsearch/templates/config.json
@@ -1,5 +1,9 @@
 {
     "scheme": "http",
     "host": "localhost",
-    "port": 9200
+    "port": 9200,
+    "bulk_kwargs": {
+        "chunk_size": 500,
+        "max_chunk_bytes": 5242880
+    }
 }
