[dy] Improve elasticsearch speed (#4824)
* [dy] Improve ES speed

* [dy] Remove logging

* [dy] Update README

* [dy] Update again

* [dy] Update default

--- a/mage_integrations/mage_integrations/destinations/elasticsearch/templates/config.json
+++ b/mage_integrations/mage_integrations/destinations/elasticsearch/templates/config.json
@@ -1,5 +1,8 @@
 {
     "scheme": "http",
     "host": "localhost",
-    "port": 9200
+    "port": 9200,
+    "bulk_kwargs": {
+        "chunk_size": 500
+    }
 }
