--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cryptography==41.0.6
 dask>=2022.2.0
 datadog==0.44.0
 freezegun==1.2.2
-great_expectations==0.15.50
+great-expectations==0.18.12
 httpx==0.23.1
 inflection==0.5.1
 ipykernel==6.15.0
@@ -44,7 +44,7 @@ terminado==0.17.1
 thefuzz[speedup]==0.19.0
 tornado==6.3.3
 typer[all]==0.9.0
-typing-extensions==4.5.0
+typing_extensions==4.10.0
 watchdog==4.0.0
 
 # extras
