[jk] Update template

--- a/mage_ai/data_preparation/templates/repo/metadata.yaml
+++ b/mage_ai/data_preparation/templates/repo/metadata.yaml
@@ -43,6 +43,7 @@ spark_config:
   # e.g. kwargs['context']['spark'] = spark_session
   custom_session_var_name: 'spark'
 
+help_improve_mage: true
 notification_config:
   alert_on:
     - trigger_failure
