Fixed issue 4895 and other cosmetic improvments

--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,7 @@ playwright-report/
 **/TEST_OUTPUT
 **/TEST_STATE.json
 **/TEST_CONFIG*.json
+**/TEST_*
 package-lock.json
 package.json
 yarn.lock
