--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ x-server_settings: &server_settings
     dockerfile: ./dev.Dockerfile
   command: "python mage_ai/server/server.py --host ${HOST} --port ${PORT} --project ${PROJECT} --manage-instance ${MANAGE_INSTANCE}"
   environment:
+    - ANTHROPIC_API_KEY=$ANTHROPIC_API_KEY
     - AUTHENTICATION_MODE=$AUTHENTICATION_MODE
     - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
     - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
@@ -19,9 +20,6 @@ x-server_settings: &server_settings
     - ECS_TASK_DEFINITION=$ECS_TASK_DEFINITION
     - ENABLE_NEW_RELIC=$ENABLE_NEW_RELIC
     - ENABLE_PROMETHEUS=$ENABLE_PROMETHEUS
-    - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
-    - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
-    - OTEL_PYTHON_TORNADO_EXCLUDED_URLS=$OTEL_PYTHON_TORNADO_EXCLUDED_URLS
     - ENV=dev
     - GCP_PROJECT_ID=$GCP_PROJECT_ID
     - GCP_REGION=$GCP_REGION
@@ -35,17 +33,21 @@ x-server_settings: &server_settings
     - LDAP_BIND_PASSWORD=$LDAP_BIND_PASSWORD
     - LDAP_SERVER=$LDAP_SERVER
     - MAGE_BASE_PATH=$MAGE_BASE_PATH
-    - MAGE_DATA_DIR=$MAGE_DATA_DIR
     - MAGE_DATABASE_CONNECTION_URL=$DATABASE_CONNECTION_URL
+    - MAGE_DATA_DIR=$MAGE_DATA_DIR
     - MAX_NUMBER_OF_FILE_VERSIONS=$MAX_NUMBER_OF_FILE_VERSIONS
     - NEW_RELIC_CONFIG_PATH=$NEW_RELIC_CONFIG_PATH
     - OPENAI_API_KEY=$OPENAI_API_KEY
+    - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+    - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
+    - OTEL_PYTHON_TORNADO_EXCLUDED_URLS=$OTEL_PYTHON_TORNADO_EXCLUDED_URLS
     - REQUIRE_USER_AUTHENTICATION=$REQUIRE_USER_AUTHENTICATION
     - REQUIRE_USER_PERMISSIONS=$REQUIRE_USER_PERMISSIONS
-    - SERVER_VERBOSITY=$SERVER_VERBOSITY
-    - SERVER_LOGGING_TEMPLATE=${SERVER_LOGGING_TEMPLATE:-%(levelname)s:%(name)s:%(message)s}
-    - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
     - SCHEDULER_TRIGGER_INTERVAL=$SCHEDULER_TRIGGER_INTERVAL
+    - SERVER_LOGGING_TEMPLATE=${SERVER_LOGGING_TEMPLATE:-%(levelname)s:%(name)s:%(message)s}
+    - SERVER_VERBOSITY=$SERVER_VERBOSITY
+    - VOYAGEAI_API_KEY=$VOYAGEAI_API_KEY
+    - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
   ports:
     - 6789:6789
   volumes:
@@ -55,6 +57,8 @@ x-server_settings: &server_settings
   restart: on-failure:5
   stdin_open: true # used for interactive debugging
   tty: true # used for interactive debugging
+  networks:
+    - app-network
 x-app_settings: &app_settings
   image: mage/data
   build:
@@ -88,6 +92,8 @@ x-app_settings: &app_settings
     - ./mage_ai/frontend/utils:/home/src/mage_ai/frontend/utils
     - ./mage_ai/frontend/yarn.lock:/home/src/mage_ai/frontend/yarn.lock
   working_dir: /home/src/mage_ai/frontend
+  networks:
+    - app-network
 services:
   server:
     <<: *server_settings
@@ -107,3 +113,29 @@ services:
       dockerfile: ./dev.spark.Dockerfile
     depends_on:
       - server_spark
+  neo4j:
+    image: neo4j:5.18.0
+    restart: always
+    ports:
+      - 7474:7474
+      - 7687:7687
+    volumes:
+      - ~/.neo4j/data:/data
+      - ~/.neo4j/logs:/logs
+      - ~/.neo4j/import:/import
+      - ~/.neo4j/plugins:/plugins
+    networks:
+      - app-network
+  postgres:
+    image: pgvector/pgvector:0.6.0-pg16
+    restart: always
+    ports:
+      - 5432:5432
+    volumes:
+      - ~/.postgres/data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
