--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ x-server_settings: &server_settings
     - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
     - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
     - OTEL_PYTHON_TORNADO_EXCLUDED_URLS=$OTEL_PYTHON_TORNADO_EXCLUDED_URLS
+    - REPLICATE_API_TOKEN=$REPLICATE_API_TOKEN
     - REQUIRE_USER_AUTHENTICATION=$REQUIRE_USER_AUTHENTICATION
     - REQUIRE_USER_PERMISSIONS=$REQUIRE_USER_PERMISSIONS
     - SCHEDULER_TRIGGER_INTERVAL=$SCHEDULER_TRIGGER_INTERVAL
@@ -126,6 +127,8 @@ services:
       - ~/.neo4j/plugins:/plugins
     networks:
       - app-network
+    environment:
+      - NEO4J_AUTH=neo4j/password
   postgres:
     image: pgvector/pgvector:0.6.0-pg16
     restart: always
